upto recent update

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ content="Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and co
 <link rel="shortcut icon" href="./assets/images/avatar.jpg" type="image/x-icon">
 <link href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css" rel="stylesheet"
 crossorigin="anonymous">
+<script src="./assets/js/index.js" type="module"></script>
 <meta property="og:locale" content="en_GB">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Agraj P Das (bRuttaZz)">
@@ -59,16 +60,16 @@ window.pageIdentifier = "about"
 </script>
 <body>
 <div class="profile-cover nav-bar d-flex">
-<a href="./">
+<a href="/">
 <div class="nav-item"> <span
 class="nav-item-text   selected-nav ">me</span>
 </div>
 </a>
-<a href="./projects">
+<a href="/projects">
 <div class="nav-item  "> <span
 class=" nav-item-text ">myProjects</span></div>
 </a>
-<a href=" ./blogs">
+<a href="/blogs">
 <div class="nav-item "> <span
 class=" nav-item-text">
 myBlogs</span></div>
@@ -186,12 +187,46 @@ some "good looking" projects
 <!-- project cards comes here  -->
 </div>
 </div>
+<!-- the blogs section  -->
+<div class="project-sec">
+<b class="project-sec-heading">
+<span class="mdi mdi-pin"></span>
+some "decent" blogs
+</b>
+<div class="blog-cards">
+<div class="blog-card">
+<a href="blogs/1.life-is-no-a-function-of-time">
+<div class="vertical-align-center">
+<b class="title">Good thing is: Life is not a function of time, or is it?</b>
+<p>
+Just a super simplified yet reasonable proof that Laplace&#39;s deamon can not be real.
+<div>
+<span class="badge">Last Modified: 15 Jun 2024</span>
+</div>
+</p>
+</div>
+</a>
+</div><div class="blog-card">
+<a href="blogs/11.reverse-proxy-in-python">
+<div class="vertical-align-center">
+<b class="title">Let&#39;s do the sin: Creating a HTTP reverse proxy in Python :)</b>
+<p>
+If you ever insists to build a http reverse proxy in Python, I got some handy code snippets (I also instsisted for the same, long back)
+<div>
+<span class="badge">Last Modified: </span>
+</div>
+</p>
+</div>
+</a>
+</div>
+<!-- blog cards comes here  -->
+</div>
+</div>
 <center>
 <a rel="me" href="https://fosstodon.org/@bRuttaZz" style="color: blue;">-</a>
 </center>
 <!-- content  -->
 </div>
-<script src="./assets/js/index.js" type="module"></script>
 </body>
 <footer>
 </footer>
