--- a/projects.html
+++ b/projects.html
@@ -20,6 +20,7 @@ content="Projects of bRuttaZz (Agraj P Das) | List of some of my &#39;just for f
 <link rel="shortcut icon" href="./assets/images/avatar.jpg" type="image/x-icon">
 <link href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css" rel="stylesheet"
 crossorigin="anonymous">
+<script src="./assets/js/index.js" type="module"></script>
 <meta property="og:locale" content="en_GB">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Projects | bRuttaZz">
@@ -48,16 +49,16 @@ window.pageIdentifier = "projects"
 </script>
 <body>
 <div class="profile-cover nav-bar d-flex">
-<a href="./">
+<a href="/">
 <div class="nav-item"> <span
 class="nav-item-text  ">me</span>
 </div>
 </a>
-<a href="./projects">
+<a href="/projects">
 <div class="nav-item   selected-nav "> <span
 class=" nav-item-text ">myProjects</span></div>
 </a>
-<a href=" ./blogs">
+<a href="/blogs">
 <div class="nav-item "> <span
 class=" nav-item-text">
 myBlogs</span></div>
@@ -130,7 +131,6 @@ myBlogs</span></div>
 </div>
 <!-- content  -->
 </div>
-<script src="./assets/js/index.js" type="module"></script>
 </body>
 <footer>
 </footer>
