--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name="description"
-content="Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and connection info over here!">
+<meta name="description" content="Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and connection info over here!">
+<meta name="keywords" content="agraj, agrajpdas, bruttazz, brutt, bruttsite, brutt.site, aboutme, about, self, info, person">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="index,follow">
 <meta name="googlebot" content="index,follow">
-<title>Agraj P Das (bRuttaZz)</title>
+<title>
+Agraj P Das (bRuttaZz)
+</title>
 <script type="application/ld+json">
 {
 "@context": "https://schema.org",
@@ -35,20 +37,55 @@ crossorigin="anonymous">
 <meta property="og:locale" content="en_GB">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Agraj P Das (bRuttaZz)">
-<meta property="og:description"
-content="Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and connection info over here!">
+<meta property="og:description" content="Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and connection info over here!">
 <meta property="og:url" content="https://brutt.site">
 <meta property="og:site_name" content="Agraj P Das (bRuttaZz)">
 <meta property="og:image" content="https://brutt.site/assets/images/avatar.jpg">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Agraj P Das (bRuttaZz)">
-<meta name="twitter:description"
-content="Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and connection info over here!">
+<meta name="twitter:description" content="Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and connection info over here!">
 <meta name="twitter:site" content="@bRuttaZz">
 <meta name="twitter:creator" content="@bRuttaZz">
 <meta name="twitter:image" content="https://brutt.site/assets/images/avatar.jpg">
 <meta name="google-site-verification" content="yy0W_kqfIlLBRYX7Eeqw8CKlFTdJ6Gp-ZlJSmWBMW04" />
 <meta name="google-site-verification" content="OJKRiwUcAniBZKSSyY64QsZPA6mXm99Rx3vc_PrN4gs" />
+<script>
+/**
+* Bind theming switching and ..you knw..!
+*/
+(() => {
+const systemMode = window.matchMedia("(prefers-color-scheme: dark)");
+const setSysTheme = () => {
+if (systemMode.matches) {
+document.documentElement.classList.add("dark")
+localStorage.setItem("theme-selection", "dark");
+} else {
+document.documentElement.classList.remove("dark")
+localStorage.setItem("theme-selection", "light");
+}
+}
+// set sys theme
+const cachedState = localStorage.getItem("theme-selection")
+if (cachedState === "dark")
+document.documentElement.classList.add("dark")
+else if (!cachedState)
+setSysTheme()
+systemMode.addEventListener("change", setSysTheme)
+// add custom button functionality
+window.addEventListener('load', () => {
+document.querySelector(".theme-swticher").classList.remove("d-none");
+document.querySelector(".theme-switcher-btn")?.addEventListener("click", (e) => {
+if (document.documentElement.classList.contains("dark")) {
+document.documentElement.classList.remove("dark");
+localStorage.setItem("theme-selection", "light");
+} else {
+document.documentElement.classList.add("dark")
+localStorage.setItem("theme-selection", "dark");
+}
+})
+})
+})();
+</script>
 </head>
 <!-- <noscript>
 <center>
@@ -70,8 +107,7 @@ class="nav-item-text   selected-nav ">me</span>
 class=" nav-item-text ">myProjects</span></div>
 </a>
 <a href="/blogs">
-<div class="nav-item "> <span
-class=" nav-item-text">
+<div class="nav-item "> <span class=" nav-item-text">
 myBlogs</span></div>
 </a>
 <div class="header-btn theme-swticher theme-switcher-btn text-center m-md-4 d-none">
@@ -106,7 +142,7 @@ myBlogs</span></div>
 </div><div class="bio-info">
 <span>ask me about</span><b> &nbspSystem Design, Containers, Computer Networking </b>
 </div><div class="bio-info">
-<span>pgp keys</span><b> &nbsp<a href="./facts/pgp.key" >4546 EC98 5FA6 E6CD E09A 5114 18CD 31EE 87B1 AA02</a> </b>
+<span>pgp keys</span><b> &nbsp<a href="_source/writings/configs/pgp.key" >4546 EC98 5FA6 E6CD E09A 5114 18CD 31EE 87B1 AA02</a> </b>
 </div><div class="bio-info">
 <span>github</span><b> &nbsp<a href="https://github.com/bruttazz">bRuttaZz</a> </b>
 </div>
@@ -175,7 +211,7 @@ some "good looking" projects
 </center>
 </div>
 <div class="vertical-align-center">
-<p>STMP: Sitty Talky Messaging Protocol, a primitive zero-configuration local network protocol purely written in python, originally intended for tinkering with your office mates over LAN!</p>
+<p>STMP: Sitty Talky Messaging Protocol, a primitive zero-configuration local network protocol purely written in python, originally intended for tinkering with my office mates over LAN!</p>
 <p>
 <a href="https://github.com/bRuttaZz/stmp">
 <span class="source-link">source</span>
@@ -195,7 +231,7 @@ some "decent" blogs
 </b>
 <div class="blog-cards">
 <div class="blog-card">
-<a href="blogs/1.life-is-no-a-function-of-time">
+<a href="/blogs/life-is-no-a-function-of-time">
 <div class="vertical-align-center">
 <b class="title">Good thing is: Life is not a function of time, or is it?</b>
 <p>
@@ -207,13 +243,13 @@ Just a super simplified yet reasonable proof that Laplace&#39;s deamon can not b
 </div>
 </a>
 </div><div class="blog-card">
-<a href="blogs/11.reverse-proxy-in-python">
+<a href="/blogs/reverse-proxy-in-python">
 <div class="vertical-align-center">
 <b class="title">Let&#39;s do the sin: Creating a HTTP reverse proxy in Python :)</b>
 <p>
 If you ever insists to build a http reverse proxy in Python, I got some handy code snippets (I also instsisted for the same, long back)
 <div>
-<span class="badge">Last Modified: </span>
+<span class="badge">Last Modified: 15 Jun 2024</span>
 </div>
 </p>
 </div>
