--- a/projects.html
+++ b/projects.html
@@ -4,17 +4,23 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name="description"
-content="Projects of bRuttaZz (Agraj P Das) | List of some of my &#39;just for fun&#39; projects..">
+<meta name="description" content="Projects of bRuttaZz (Agraj P Das) | List of some of my &#39;just for fun&#39; projects..">
+<meta name="keywords" content="projects, allprojects, works, docs, agraj, agrajpdas, bruttazz, brutt, bruttsite, brutt.site">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="index,follow">
 <meta name="googlebot" content="index,follow">
-<title>Projects | bRuttaZz</title>
+<title>
+Projects | bRuttaZz
+</title>
 <script type="application/ld+json">
-{ "@context" : "https://schema.org" , "@id" : "https://brutt.site" , "@type" : "WebPage" , "name"
-: "Projects | bRuttaZz" , "url" : "https://brutt.site/projects" , "description"
-: "Projects of bRuttaZz (Agraj P Das)! List of some of my 'just for fun' projects.." , "logo"
-: "https://brutt.site/assets/images/avatar.jpg" , }
+{
+"@context" : "https://schema.org" ,
+"@id" : "https://brutt.site" ,
+"@type" : "WebPage" ,
+"name": "Projects | bRuttaZz" ,
+"url" : "https://brutt.site/projects" ,
+"description": "Projects of bRuttaZz (Agraj P Das)! List of some of my 'just for fun' projects.." ,
+"logo": "https://brutt.site/assets/images/avatar.jpg" , }
 </script>
 <link rel="stylesheet" href="./assets/style.css">
 <link rel="shortcut icon" href="./assets/images/avatar.jpg" type="image/x-icon">
@@ -24,20 +30,55 @@ crossorigin="anonymous">
 <meta property="og:locale" content="en_GB">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Projects | bRuttaZz">
-<meta property="og:description"
-content="Projects of bRuttaZz (Agraj P Das) | List of some of my &#39;just for fun&#39; projects..">
+<meta property="og:description" content="Projects of bRuttaZz (Agraj P Das) | List of some of my &#39;just for fun&#39; projects..">
 <meta property="og:url" content="https://brutt.site">
 <meta property="og:site_name" content="Projects | bRuttaZz">
 <meta property="og:image" content="https://brutt.site/assets/images/avatar.jpg">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Projects | bRuttaZz">
-<meta name="twitter:description"
-content="Projects of bRuttaZz (Agraj P Das) | List of some of my &#39;just for fun&#39; projects..">
+<meta name="twitter:description" content="Projects of bRuttaZz (Agraj P Das) | List of some of my &#39;just for fun&#39; projects..">
 <meta name="twitter:site" content="@bRuttaZz">
 <meta name="twitter:creator" content="@bRuttaZz">
 <meta name="twitter:image" content="https://brutt.site/assets/images/avatar.jpg">
 <meta name="google-site-verification" content="yy0W_kqfIlLBRYX7Eeqw8CKlFTdJ6Gp-ZlJSmWBMW04" />
 <meta name="google-site-verification" content="OJKRiwUcAniBZKSSyY64QsZPA6mXm99Rx3vc_PrN4gs" />
+<script>
+/**
+* Bind theming switching and ..you knw..!
+*/
+(() => {
+const systemMode = window.matchMedia("(prefers-color-scheme: dark)");
+const setSysTheme = () => {
+if (systemMode.matches) {
+document.documentElement.classList.add("dark")
+localStorage.setItem("theme-selection", "dark");
+} else {
+document.documentElement.classList.remove("dark")
+localStorage.setItem("theme-selection", "light");
+}
+}
+// set sys theme
+const cachedState = localStorage.getItem("theme-selection")
+if (cachedState === "dark")
+document.documentElement.classList.add("dark")
+else if (!cachedState)
+setSysTheme()
+systemMode.addEventListener("change", setSysTheme)
+// add custom button functionality
+window.addEventListener('load', () => {
+document.querySelector(".theme-swticher").classList.remove("d-none");
+document.querySelector(".theme-switcher-btn")?.addEventListener("click", (e) => {
+if (document.documentElement.classList.contains("dark")) {
+document.documentElement.classList.remove("dark");
+localStorage.setItem("theme-selection", "light");
+} else {
+document.documentElement.classList.add("dark")
+localStorage.setItem("theme-selection", "dark");
+}
+})
+})
+})();
+</script>
 </head>
 <!-- <noscript>
 <center>
@@ -59,8 +100,7 @@ class="nav-item-text  ">me</span>
 class=" nav-item-text ">myProjects</span></div>
 </a>
 <a href="/blogs">
-<div class="nav-item "> <span
-class=" nav-item-text">
+<div class="nav-item "> <span class=" nav-item-text">
 myBlogs</span></div>
 </a>
 <div class="header-btn theme-swticher theme-switcher-btn text-center m-md-4 d-none">
@@ -101,7 +141,7 @@ myBlogs</span></div>
 </center>
 </div>
 <div class="vertical-align-center">
-<p>STMP: Sitty Talky Messaging Protocol, a primitive zero-configuration local network protocol purely written in python, originally intended for tinkering with your office mates over LAN!</p>
+<p>STMP: Sitty Talky Messaging Protocol, a primitive zero-configuration local network protocol purely written in python, originally intended for tinkering with my office mates over LAN!</p>
 <p>
 <a href="https://github.com/bRuttaZz/stmp">
 <span class="source-link">source</span>
