--- a/index.html
+++ b/index.html
@@ -237,19 +237,7 @@ some "decent" blogs
 <p>
 Just a super simplified yet reasonable proof that Laplace&#39;s deamon can not be real.
 <div>
-<span class="badge">Last Modified: 15 Jun 2024</span>
-</div>
-</p>
-</div>
-</a>
-</div><div class="blog-card">
-<a href="/blogs/reverse-proxy-in-python">
-<div class="vertical-align-center">
-<b class="title">Let&#39;s do the sin: Creating a HTTP reverse proxy in Python :)</b>
-<p>
-If you ever insists to build a http reverse proxy in Python, I got some handy code snippets (I also instsisted for the same, long back)
-<div>
-<span class="badge">Last Modified: 15 Jun 2024</span>
+<span class="badge">Last Modified: 16 Jun 2024</span>
 </div>
 </p>
 </div>
@@ -265,5 +253,6 @@ If you ever insists to build a http reverse proxy in Python, I got some handy co
 </div>
 </body>
 <footer>
+<center class="copyright">© 2024 Agraj P Das</center>
 </footer>
 </html>
