--- a/blogs/index.html
+++ b/blogs/index.html
@@ -121,19 +121,7 @@ myBlogs</span></div>
 <p>
 Just a super simplified yet reasonable proof that Laplace&#39;s deamon can not be real.
 <div>
-<span class="badge">Last Modified: 15 Jun 2024</span>
-</div>
-</p>
-</div>
-</a>
-</div><div class="blog-card">
-<a href="/blogs/reverse-proxy-in-python">
-<div class="vertical-align-center">
-<b class="title">Let&#39;s do the sin: Creating a HTTP reverse proxy in Python :)</b>
-<p>
-If you ever plans to create a HTTP reverse proxy, Of course python is not the answer. But if you insists so, I got some handy code snippets (I also instsisted the same, long back)
-<div>
-<span class="badge">Last Modified: 15 Jun 2024</span>
+<span class="badge">Last Modified: 16 Jun 2024</span>
 </div>
 </p>
 </div>
@@ -145,5 +133,6 @@ If you ever plans to create a HTTP reverse proxy, Of course python is not the an
 </div>
 </body>
 <footer>
+<center class="copyright">© 2024 Agraj P Das</center>
 </footer>
 </html>
