name change: made it to github terms

--- a/blogs/life-is-no-a-function-of-time.html
+++ b/blogs/life-is-no-a-function-of-time.html
@@ -127,12 +127,12 @@
     <!-- blog portion  -->
     <div class="blog-content">
         <div>
-            <span class="blog-date-badge">Last Edited : 16 Jun 2024</span>
+            <span class="blog-date-badge">Last Edited : </span>
         </div>
         <br>
         <html><head></head><body><h1>Good thing is: Life is not a function of time. Or is it?</h1>
 <center>    
-<img src="/./_source/writings/blogs/1.life-is-no-a-function-of-time/./laplace-deamon.jpg" width="75%" alt="Viktor Beekman’s rendition of Laplace’s demon">
+<img src="/./src/writings/blogs/1.life-is-no-a-function-of-time/./laplace-deamon.jpg" width="75%" alt="Viktor Beekman’s rendition of Laplace’s demon">
 <p><em>Figure: <a href="https://www.instagram.com/viktordepictor/">Viktor Beekman</a>’s rendition of Laplace’s demon</em></p>
 </center>
 <br>
@@ -146,7 +146,7 @@
 <p>After a few months, we started learning <strong>Thermodynamics</strong>, which was a delight for me, as it helped me find some satisfying answers to this quest. Trust me it's fun..</p>
 <p>Suppose, Laplace's Demon is true, then the graph showing the amount of information versus time for the universe will look like the one shown bellow,</p>
 <center>
-    <img src="/./_source/writings/blogs/1.life-is-no-a-function-of-time/./laplaces-information-time.png" style="max-width: 75%; max-height: 18%">
+    <img src="/./src/writings/blogs/1.life-is-no-a-function-of-time/./laplaces-information-time.png" style="max-width: 75%; max-height: 18%">
 </center>
 <p>i.e., from the existing state of the universe and a set of equations and formulas, the demon can predict the future. Therefore, no new information is added, meaning the curve should run parallel to the time axis.</p>
 <p>Wait, what does 'information' mean here? Well, it can be defined as the facts/data regarding something. In other terms, information can be understood as a measure of how random an object is.</p>
@@ -158,7 +158,7 @@ So,</p>
 <p>Fortunately, as implied by <strong><a href="https://en.wikipedia.org/wiki/Second_law_of_thermodynamics">second law of thermodynamics</a></strong> we are not living in such a universe.
 <br>In our universe, the state of entropy will keep on increasing. So the graph should resemble the one shown below.</p>
 <center>
-    <img src="/./_source/writings/blogs/1.life-is-no-a-function-of-time/./information-time.png" style="max-width: 75%; max-height: 18%">
+    <img src="/./src/writings/blogs/1.life-is-no-a-function-of-time/./information-time.png" style="max-width: 75%; max-height: 18%">
 </center>
 <p>Aand what does it mean??
 <br>Laplace's demon is not a possible one.
