--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ some "decent" blogs
 <p>
 Just a super simplified yet reasonable proof that Laplace&#39;s deamon can not be real.
 <div>
-<span class="badge">Last Modified: 16 Jun 2024</span>
+<span class="badge">Last Modified: </span>
 </div>
 </p>
 </div>
