--- a/blogs/life-is-no-a-function-of-time.html
+++ b/blogs/life-is-no-a-function-of-time.html
@@ -38,13 +38,13 @@
     <meta property="og:description" content="Just a super simplified yet reasonable proof that Laplace&#39;s deamon can not be real.">
     <meta property="og:url" content="https://brutt.site">
     <meta property="og:site_name" content="Good thing is: Life is not a function of time, or is it?">
-    <meta property="og:image" content="https://brutt.site/assets/images/avatar.jpg">
+    <meta property="og:image" content="https://bruttazz.github.io/src/writings/blogs/1.life-is-no-a-function-of-time/laplace-deamon.jpg">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Good thing is: Life is not a function of time, or is it?">
     <meta name="twitter:description" content="Just a super simplified yet reasonable proof that Laplace&#39;s deamon can not be real.">
     <meta name="twitter:site" content="@bRuttaZz">
     <meta name="twitter:creator" content="@bRuttaZz">
-    <meta name="twitter:image" content="https://brutt.site/assets/images/avatar.jpg">
+    <meta name="twitter:image" content="https://bruttazz.github.io/src/writings/blogs/1.life-is-no-a-function-of-time/laplace-deamon.jpg">
     <meta name="google-site-verification" content="yy0W_kqfIlLBRYX7Eeqw8CKlFTdJ6Gp-ZlJSmWBMW04" />
     <meta name="google-site-verification" content="OJKRiwUcAniBZKSSyY64QsZPA6mXm99Rx3vc_PrN4gs" />
 
