blog update and reame update

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -117,7 +117,7 @@ myBlogs</span></div>
 <div class="blog-card">
 <a href="/blogs/life-is-no-a-function-of-time">
 <div class="vertical-align-center">
-<b class="title">Good thing is: Life is not a function of time, or is it?</b>
+<b class="title">Good thing is: Life is not a univariate function of time, or is it?</b>
 <p>
 Just a super simplified yet reasonable proof that Laplace&#39;s deamon can not be real.
 <div>
