--- a/blogs/life-is-no-a-function-of-time.html
+++ b/blogs/life-is-no-a-function-of-time.html
@@ -13,7 +13,7 @@
     <meta name="googlebot" content="index,follow">
 
     <title>
-        Good thing is: Life is not a function of time, or is it?
+        Good thing is: Life is not a univariate function of time, or is it?
     </title>
     <script type="application/ld+json">
         {
@@ -34,13 +34,13 @@
     <script src=".././assets/js/index.js" type="module"></script>
     <meta property="og:locale" content="en_GB">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Good thing is: Life is not a function of time, or is it?">
+    <meta property="og:title" content="Good thing is: Life is not a univariate function of time, or is it?">
     <meta property="og:description" content="Just a super simplified yet reasonable proof that Laplace&#39;s deamon can not be real.">
     <meta property="og:url" content="https://brutt.site">
-    <meta property="og:site_name" content="Good thing is: Life is not a function of time, or is it?">
+    <meta property="og:site_name" content="Good thing is: Life is not a univariate function of time, or is it?">
     <meta property="og:image" content="https://bruttazz.github.io/src/writings/blogs/1.life-is-no-a-function-of-time/laplace-deamon.jpg">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Good thing is: Life is not a function of time, or is it?">
+    <meta name="twitter:title" content="Good thing is: Life is not a univariate function of time, or is it?">
     <meta name="twitter:description" content="Just a super simplified yet reasonable proof that Laplace&#39;s deamon can not be real.">
     <meta name="twitter:site" content="@bRuttaZz">
     <meta name="twitter:creator" content="@bRuttaZz">
@@ -130,7 +130,7 @@
             <span class="blog-date-badge">Last Edited : 16 Jun 2024</span>
         </div>
         <br>
-        <html><head></head><body><h1>Good thing is: Life is not a function of time. Or is it?</h1>
+        <html><head></head><body><h1>Good thing is: Life is not a univariate function of time. Or is it?</h1>
 <center>    
 <img src="/./src/writings/blogs/1.life-is-no-a-function-of-time/./laplace-deamon.jpg" width="75%" alt="Viktor Beekman’s rendition of Laplace’s demon">
 <p><em>Figure: <a href="https://www.instagram.com/viktordepictor/">Viktor Beekman</a>’s rendition of Laplace’s demon</em></p>
@@ -162,7 +162,7 @@ So,</p>
 </center>
 <p>Aand what does it mean??
 <br>Laplace's demon is not a possible one.
-<br>The universe is not a function of time.
+<br>The universe is not solely a function of time (at least we cannot predict it with time alone).
 <br>And the future cannot be predicted.</p>
 <p>That's it! When you wake up from your bed, if you ever feel like life is boring, think about the <strong>second law of thermodynamics</strong>; your day will never be that predictable and boring. There will always be some random things waiting for you along the way.</p>
 <p><br><br><br></p>
@@ -170,7 +170,10 @@ So,</p>
 <p>Wait a min, where does the additional information come from? Not sure, maybe from the events when quantum mechanical <a href="https://en.wikipedia.org/wiki/Wave_function_collapse">wave functions collapses</a>..</p>
 </blockquote>
 <blockquote>
-<p>There is a problem. Even in this case, the newly emerging information is completely random, right? Still, nothing is within our control, right?? (Leave me alone! I'm tired of these questions.)</p>
+<p>There is a problem. Even in this case, the newly emerging information is completely random, right? Still, nothing is within our control, right??</p>
+</blockquote>
+<blockquote>
+<p>(Leave me alone! I'm tired of these questions.)</p>
 </blockquote>
 </body></html>    
     </div>
