added sitty talky

--- a/index.html
+++ b/index.html
@@ -204,6 +204,24 @@ some "good looking" projects
 </div><div class="project-card">
 <div class="vertical-align-center">
 <center>
+<a href="https://github.com/bRuttaZz/sittytalky">
+<img width="130px" src="https://github.com/bRuttaZz/sittytalky/raw/DEV/data/icons/hicolor/scalable/apps/site.brutt.sittytalky.svg">
+</a>
+<br><b>SittyTalky</b>
+</center>
+</div>
+<div class="vertical-align-center">
+<p>SittyTalky: a primitive zero-configuration local network GTK4 GNOME based application purely written in python, originally intended for tinkering with my office mates over LAN!</p>
+<p>
+<a href="https://github.com/bRuttaZz/sittytalky">
+<span class="source-link">source</span>
+</a>
+<span class="license">license : GPLv3</span>
+</p>
+</div>
+</div><div class="project-card">
+<div class="vertical-align-center">
+<center>
 <a href="https://github.com/bRuttaZz/stmp">
 <img width="130px" src="https://github.com/bRuttaZz/stmp/raw/main/.assets/logo.png">
 </a>
