--- a/blogs/index.html
+++ b/blogs/index.html
@@ -126,6 +126,18 @@ Just a super simplified yet reasonable proof that Laplace&#39;s deamon can not b
 </p>
 </div>
 </a>
+</div><div class="blog-card">
+<a href="/blogs/reverse-proxy-in-python">
+<div class="vertical-align-center">
+<b class="title">Let&#39;s do the sin: Creating a reverse proxy in Python :)</b>
+<p>
+If you ever plans to create a HTTP/WS reverse proxy, Of course python is not the answer. But if you insists so, I got some handy code snippets (I also instsisted the same, long back)
+<div>
+<span class="badge">Last Modified: 24 Jun 2024</span>
+</div>
+</p>
+</div>
+</a>
 </div>
 </div>
 <!-- TODO : add pagination to the blogs page  -->
