--- a/index.html
+++ b/index.html
@@ -260,6 +260,18 @@ Just a super simplified yet reasonable proof that Laplace&#39;s deamon can not b
 </p>
 </div>
 </a>
+</div><div class="blog-card">
+<a href="/blogs/reverse-proxy-in-python">
+<div class="vertical-align-center">
+<b class="title">Let&#39;s do the sin: Creating a reverse proxy in Python :)</b>
+<p>
+If you ever insists to build a http reverse proxy in Python, I got some handy code snippets (I also instsisted for the same, long back)
+<div>
+<span class="badge">Last Modified: 24 Jun 2024</span>
+</div>
+</p>
+</div>
+</a>
 </div>
 <!-- blog cards comes here  -->
 </div>
