--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ some "good looking" projects
 </center>
 </div>
 <div class="vertical-align-center">
-<p>SittyTalky: a primitive zero-configuration local network GTK4 GNOME based application purely written in python, originally intended for tinkering with my office mates over LAN!</p>
+<p>SittyTalky: a primitive zero-configuration local network GNOME application purely written in python, originally intended for tinkering with my office mates over LAN!</p>
 <p>
 <a href="https://github.com/bRuttaZz/sittytalky">
 <span class="source-link">source</span>
