--- a/blogs/reverse-proxy-in-python.html
+++ b/blogs/reverse-proxy-in-python.html
@@ -38,13 +38,13 @@
     <meta property="og:description" content="If you ever plans to create a HTTP/WS reverse proxy, Of course python is not the answer. But if you insists so, I got some handy code snippets (I also instsisted the same, long back)">
     <meta property="og:url" content="https://brutt.site">
     <meta property="og:site_name" content="Let&#39;s do the sin: Creating a reverse proxy in Python :)">
-    <meta property="og:image" content="https://bruttazz.github.io/src/writings/blogs/1.life-is-no-a-function-of-time/laplace-deamon.jpg">
+    <meta property="og:image" content="https://brutt.site/src/writings/blogs/12.reverse-proxy-in-python/py.nginx.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Let&#39;s do the sin: Creating a reverse proxy in Python :)">
     <meta name="twitter:description" content="If you ever plans to create a HTTP/WS reverse proxy, Of course python is not the answer. But if you insists so, I got some handy code snippets (I also instsisted the same, long back)">
     <meta name="twitter:site" content="@bRuttaZz">
     <meta name="twitter:creator" content="@bRuttaZz">
-    <meta name="twitter:image" content="https://bruttazz.github.io/src/writings/blogs/1.life-is-no-a-function-of-time/laplace-deamon.jpg">
+    <meta name="twitter:image" content="https://brutt.site/src/writings/blogs/12.reverse-proxy-in-python/py.nginx.png">
     <meta name="google-site-verification" content="yy0W_kqfIlLBRYX7Eeqw8CKlFTdJ6Gp-ZlJSmWBMW04" />
     <meta name="google-site-verification" content="OJKRiwUcAniBZKSSyY64QsZPA6mXm99Rx3vc_PrN4gs" />
 
